# leftpad-c

./: .gitignore  Makefile.am  Readme.md  configure.ac  leftpad-test.c  leftpad.c  leftpad.h  libleftpad.pc.in
